logs/2024-01-05-15-53/build/bioconductor_docker-3.19/x86_64/tradeSeq
+ Rscript -e 'Sys.setenv(BIOCONDUCTOR_USE_CONTAINER_REPOSITORY=FALSE); p <- .libPaths(); p <- c('\''/tmp/tmp/built'\'', p); .libPaths(p); if(BiocManager::install('\''tradeSeq'\'', INSTALL_opts = '\''--build'\'', update = TRUE, quiet = FALSE, dependencies=TRUE, force = TRUE, keep_outputs = TRUE) %in% rownames(installed.packages())) q(status = 0) else q(status = 1)'
'getOption("repos")' replaces Bioconductor standard repositories, see
'help("repositories", package = "BiocManager")' for details.
Replacement repositories:
    CRAN: https://cloud.r-project.org
Bioconductor version 3.19 (BiocManager 1.30.22), R Under development (unstable)
  (2024-01-09 r85796)
Installing package(s) 'tradeSeq'
also installing the dependencies ‘genefilter’, ‘zinbwave’, ‘pbapply’, ‘clusterExperiment’

trying URL 'https://bioconductor.org/packages/3.19/bioc/src/contrib/genefilter_1.85.0.tar.gz'
Content type 'application/x-gzip' length 993784 bytes (970 KB)
==================================================
downloaded 970 KB

trying URL 'https://bioconductor.org/packages/3.19/bioc/src/contrib/zinbwave_1.25.0.tar.gz'
Content type 'application/x-gzip' length 477324 bytes (466 KB)
==================================================
downloaded 466 KB

trying URL 'https://cloud.r-project.org/src/contrib/pbapply_1.7-2.tar.gz'
Content type 'application/x-gzip' length 23980 bytes (23 KB)
==================================================
downloaded 23 KB

trying URL 'https://bioconductor.org/packages/3.19/bioc/src/contrib/clusterExperiment_2.23.0.tar.gz'
Content type 'application/x-gzip' length 11072001 bytes (10.6 MB)
==================================================
downloaded 10.6 MB

trying URL 'https://bioconductor.org/packages/3.19/bioc/src/contrib/tradeSeq_1.17.0.tar.gz'
Content type 'application/x-gzip' length 5331731 bytes (5.1 MB)
==================================================
downloaded 5.1 MB

* installing *source* package ‘genefilter’ ...
** using staged installation
** libs
using C compiler: ‘gcc (Ubuntu 11.4.0-1ubuntu1~22.04) 11.4.0’
using Fortran compiler: ‘GNU Fortran (Ubuntu 11.4.0-1ubuntu1~22.04) 11.4.0’
using C++ compiler: ‘g++ (Ubuntu 11.4.0-1ubuntu1~22.04) 11.4.0’
g++ -std=gnu++17 -I"/usr/local/lib/R/include" -DNDEBUG   -I/usr/local/include    -fpic  -g -O2 -fstack-protector-strong -Wformat -Werror=format-security -Wdate-time -D_FORTIFY_SOURCE=2 -g  -c half_range_mode.cpp -o half_range_mode.o
half_range_mode.cpp: In function ‘double half_range_mode(double*, double*, double, int)’:
half_range_mode.cpp:100:60: warning: format ‘%i’ expects argument of type ‘int’, but argument 5 has type ‘std::vector<int>::size_type’ {aka ‘long unsigned int’} [-Wformat=]
  100 |     if (diag) Rprintf( "N = %i, N'' = %i, w = %.4f, |J| = %i\n", N, N_double_prime, w, J.size() );
      |                                                           ~^                           ~~~~~~~~
      |                                                            |                                 |
      |                                                            int                               std::vector<int>::size_type {aka long unsigned int}
      |                                                           %li
gcc -I"/usr/local/lib/R/include" -DNDEBUG   -I/usr/local/include    -fpic  -g -O2 -fstack-protector-strong -Wformat -Werror=format-security -Wdate-time -D_FORTIFY_SOURCE=2 -g  -c init.c -o init.o
gcc -I"/usr/local/lib/R/include" -DNDEBUG   -I/usr/local/include    -fpic  -g -O2 -fstack-protector-strong -Wformat -Werror=format-security -Wdate-time -D_FORTIFY_SOURCE=2 -g  -c nd.c -o nd.o
nd.c: In function ‘detectTies’:
nd.c:75:21: error: format not a string literal and no format arguments [-Werror=format-security]
   75 |             warning(msg_buf);
      |                     ^~~~~~~
cc1: some warnings being treated as errors
make: *** [/usr/local/lib/R/etc/Makeconf:191: nd.o] Error 1
ERROR: compilation failed for package ‘genefilter’
* removing ‘/tmp/tmp/built/genefilter’
* installing *source* package ‘pbapply’ ...
** package ‘pbapply’ successfully unpacked and MD5 sums checked
** using staged installation
** R
** inst
** byte-compile and prepare package for lazy loading
** help
*** installing help indices
** building package indices
** testing if installed package can be loaded from temporary location
** testing if installed package can be loaded from final location
** testing if installed package keeps a record of temporary installation path
* creating tarball
packaged installation of ‘pbapply’ as ‘pbapply_1.7-2_R_x86_64-pc-linux-gnu.tar.gz’
* DONE (pbapply)
ERROR: dependency ‘genefilter’ is not available for package ‘zinbwave’
* removing ‘/tmp/tmp/built/zinbwave’
* installing *source* package ‘tradeSeq’ ...
** using staged installation
** R
** data
** inst
** byte-compile and prepare package for lazy loading
** help
*** installing help indices
** building package indices
** installing vignettes
** testing if installed package can be loaded from temporary location
** testing if installed package can be loaded from final location
** testing if installed package keeps a record of temporary installation path
* creating tarball
packaged installation of ‘tradeSeq’ as ‘tradeSeq_1.17.0_R_x86_64-pc-linux-gnu.tar.gz’
* DONE (tradeSeq)
ERROR: dependency ‘zinbwave’ is not available for package ‘clusterExperiment’
* removing ‘/tmp/tmp/built/clusterExperiment’

The downloaded source packages are in
	‘/tmp/RtmpN2R8IH/downloaded_packages’
Old packages: 'pkgload', 'withr'
Warning messages:
1: In install.packages(...) :
  installation of package ‘genefilter’ had non-zero exit status
2: In install.packages(...) :
  installation of package ‘zinbwave’ had non-zero exit status
3: In install.packages(...) :
  installation of package ‘clusterExperiment’ had non-zero exit status

real	0m29.617s
user	0m23.808s
sys	0m3.582s
